Extended SimpleApp to include system and environment properties. Improved Log4j handling.